# cpplinq_examples

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
examples/average/: average_example.cpp
examples/example1/: CMakeLists.txt  example1.cpp
examples/select/: select_example.cpp
examples/sum/: CMakeLists.txt  sum_example.cpp
examples/where/: where_example.cpp
